--- a/proxy/conf.d/gateway.conf
+++ b/proxy/conf.d/gateway.conf
@@ -48,7 +48,7 @@ server {
 	# - Allows styles from self, jsdelivr.net, and Google Fonts
 	# - Allows fonts from Google Fonts and jsdelivr.net
 	# - Allows images from self and local media paths
-    listen 443 ssl;
+    listen 80;
 	#server_name ec2-51-20-85-225.eu-north-1.compute.amazonaws.com localhost;
 	server_name transcendence.alematta.com www.transcendence.alematta.com;
 	ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
