--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,17 +1,11 @@
-FROM nginx:latest
+FROM nginx:alpine
 
-# Install ModSecurity dependencies
-RUN apt-get update
-RUN apt-get upgrade -y
-RUN apt-get install -y openssl vim sudo curl net-tools
-	# libmodsecurity3 \
-	# libnginx-mod-security \
-	# modsecurity-crs \
-	# && rm -rf /var/lib/apt/lists/*
-RUN mkdir -p /etc/nginx/ssl/
-# Copy ModSecurity config and CRS rules
-# COPY modsecurity/modsecurity.conf /etc/nginx/modsec/modsecurity.conf
-# COPY modsecurity/crs/ /etc/nginx/modsec/crs/
+#RUN apt-get update
+#RUN apt-get upgrade -y
+#RUN apt-get install -y openssl vim sudo curl net-tools
+RUN apk update && apk add --no-cache curl vim sudo net-tools
+
+#RUN mkdir -p /etc/nginx/ssl/
 
 # Copy Nginx configuration
 COPY conf/nginx.conf /etc/nginx/nginx.conf
@@ -21,9 +15,6 @@ COPY conf.d/gateway.conf /etc/nginx/conf.d/
 
 # Copy frontend directory into var/www/html of the container
 COPY frontend /var/www/html
-
-# Enable ModSecurity in Nginx
-# RUN ln -s /etc/nginx/modsec/modsecurity.conf /etc/nginx/modsec/modsecurity-enabled.conf
 
 COPY tools/proxy.sh /usr/local/bin/proxy.sh
 RUN chmod +x /usr/local/bin/proxy.sh
