--- a/proxy/conf.d/gateway.conf
+++ b/proxy/conf.d/gateway.conf
@@ -51,13 +51,13 @@ server {
     listen 80;
 	#server_name ec2-51-20-85-225.eu-north-1.compute.amazonaws.com localhost;
 	server_name transcendence.alematta.com www.transcendence.alematta.com;
-	ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-	ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_prefer_server_ciphers on;
-	ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
-	ssl_session_cache shared:SSL:10m;
-	ssl_session_timeout 1h;
+	#ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+	#ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+	#ssl_protocols TLSv1.2 TLSv1.3;
+	#ssl_prefer_server_ciphers on;
+	#ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+	#ssl_session_cache shared:SSL:10m;
+	#ssl_session_timeout 1h;
 
 	add_header X-Frame-Options "SAMEORIGIN" always;
 	add_header X-Content-Type-Options "nosniff" always;
@@ -70,12 +70,13 @@ server {
 		script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net;
 		style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com;
 		font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://threejs.org;
-		img-src 'self' data: http://localhost/media/ https://localhost/media/ https://grafana.com;
+		img-src 'self' data: https://transcendence.alematta.com/media/ https://www.transcendence.alematta.com/media/ https://grafana.com;
 		base-uri 'self';
 		form-action 'self';
 		manifest-src 'self';
 	" always;
 
+		#img-src 'self' data: http://localhost/media/ https://localhost/media/ https://grafana.com;
 
 
 	location / {
@@ -134,7 +135,8 @@ server {
 		add_header Cache-Control "public, max-age=604800, immutable";
 
 		add_header X-Content-Type-Options "nosniff";
-		add_header Access-Control-Allow-Origin "https://ec2-51-20-85-225.eu-north-1.compute.amazonaws.com";
+		add_header Access-Control-Allow-Origin "https://transcendence.alematta.com";
+		#add_header Access-Control-Allow-Origin "https://ec2-51-20-85-225.eu-north-1.compute.amazonaws.com";
 
 		error_log /var/log/nginx/media-error.log debug;
 		add_header X-Debug-Path $request_filename;
