--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Trigger workflow only on push to main branch
+      - main
 
 jobs:
   ci:
@@ -26,7 +26,7 @@ jobs:
   cd:
     name: Continuous Deployment
     runs-on: ubuntu-latest
-    needs: ci  # Only run if the CI job succeeds
+    needs: ci
 
     steps:
       - name: Checkout code
@@ -46,47 +46,12 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             echo "CD Stage: Navigating to project directory..."
             cd mini_transcendence/
-
             echo "CD Stage: Pulling latest code from Git..."
             git pull origin main
-
             echo "CD Stage: Stopping running containers..."
             sudo docker compose down
-
             echo "CD Stage: Building and restarting containers..."
             sudo docker compose up --build -d
-
             echo "CD Stage: Deployment complete."
           EOF
 
-
-
-#name: CI/CD Pipeline
-#
-#on:
-#  push:
-#    branches:
-#      - main
-#
-#jobs:
-#  deploy:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Set up SSH
-#        uses: webfactory/ssh-agent@v0.5.4
-#        with:
-#          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
-#
-#      - name: Deploy to EC2
-#        run: |
-#          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-#            cd mini_transcendence/
-#            git pull origin main
-#            sudo docker compose down
-#            sudo docker compose up --build -d
-#          EOF
-#
