--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Echo CI stage
-        run: echo "CI Stage: Code checkout complete."
+        run: echo "CI Stage Code checkout complete."
 
       - name: Build Docker images
         run: |
           echo "CI Stage: Starting Docker build..."
           docker compose build
-          echo "CI Stage: Docker images built successfully."
+          echo "CI Stage Docker images built successfully."
 
   cd:
     name: Continuous Deployment
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Echo CD stage
-        run: echo "CD Stage: Preparing to deploy to EC2..."
+        run: echo "CD Stage Preparing to deploy to EC2..."
 
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.4
