--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,23 @@ jobs:
       - name: Echo CD stage
         run: echo "CD Stage Preparing to deploy to EC2..."
 
+      - name: Generate .env from GitHub Secrets
+        run: |
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+          echo "POSTGRES_AUTH_DB=${{ secrets.POSTGRES_AUTH_DB }}" >> .env
+          echo "POSTGRES_HISTORY_DB=${{ secrets.POSTGRES_HISTORY_DB }}" >> .env
+          echo "POSTGRES_TOURNAMENT_DB=${{ secrets.POSTGRES_TOURNAMENT_DB }}" >> .env
+          echo "POSTGRES_AUTH_HOST=${{ secrets.POSTGRES_AUTH_HOST }}" >> .env
+          echo "POSTGRES_HISTORY_HOST=${{ secrets.POSTGRES_HISTORY_HOST }}" >> .env
+          echo "POSTGRES_TOURNAMENT_HOST=${{ secrets.POSTGRES_TOURNAMENT_HOST }}" >> .env
+          echo "POSTGRES_PORT =${{ secrets.POSTGRES_PORT }}" >> .env
+          echo "CLOUDFLARE_TUNNEL_TOKEN=${{ secrets.CLOUDFLARE_TUNNEL_TOKEN }}" >> .env
+          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
+          echo "SECRET_KEY_HISTORY=${{ secrets.SECRET_KEY_HISTORY }}" >> .env
+          echo "SECRET_KEY_TOURNAMENT=${{ secrets.SECRET_KEY_TOURNAMENT }}" >> .env
+          echo "JWT_ALGO=${{ secrets.JWT_ALGO }}" >> .env
+
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.4
         with:
