--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,16 +46,16 @@ services:
     image: postgres:15-alpine
     container_name: auth_db
     env_file: ".env"
-    # environment:
-    #  - POSTGRES_USER=${POSTGRES_USER}
-    #  - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    #  - POSTGRES_DB=${POSTGRES_AUTH_DB}
-    #  - POSTGRES_HOST=${POSTGRES_AUTH_HOST}
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_AUTH_DB}
+      - POSTGRES_HOST=${POSTGRES_AUTH_HOST}
     restart: always
     volumes:
       - postgres_auth:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_AUTH_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -83,16 +83,16 @@ services:
     image: postgres:15-alpine
     container_name: tournament_db
     env_file: ".env"
-    # environment:
-    #  - POSTGRES_USER=${POSTGRES_USER}
-    #  - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    #  - POSTGRES_DB=${POSTGRES_TOURNAMENT_DB}
-    #  - POSTGRES_HOST=${POSTGRES_TOURNAMENT_HOST}
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_TOURNAMENT_DB}
+      - POSTGRES_HOST=${POSTGRES_TOURNAMENT_HOST}
     restart: always
     volumes:
       - postgres_tournament:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_TOURNAMENT_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -119,16 +119,16 @@ services:
     image: postgres:15-alpine
     container_name: history_db
     env_file: ".env"
-    # environment:
-    #  - POSTGRES_USER=${POSTGRES_USER}
-    #  - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    #  - POSTGRES_DB=${POSTGRES_HISTORY_DB}
-    #  - POSTGRES_HOST=${POSTGRES_HISTORY_HOST}
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_HISTORY_DB}
+      - POSTGRES_HOST=${POSTGRES_HISTORY_HOST}
     restart: always
     volumes:
       - postgres_history:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_HISTORY_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
