--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,8 +61,8 @@ jobs:
       - name: Transfer .env file to EC2
         run: |
           # The source is .env (from the runner's current directory)
-          # The target is the full path on EC2: /home/admin/mini_transcendence/
-          scp -o StrictHostKeyChecking=no .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/admin/mini_transcendence/
+          # The target is the full path on EC2: /home/${{ secrets.EC2_USER }}/mini_transcendence/
+          scp -o StrictHostKeyChecking=no .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/mini_transcendence/
 
 
 
