--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,11 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
+      - name: Debug EC2 secrets
+        run: |
+          echo "EC2_USER: ${{ secrets.EC2_USER }}"
+          echo "EC2_HOST: ${{ secrets.EC2_HOST }}"
+          echo "SSH : ${{ secrets.EC2_SSH_KEY }}"
 
       - name: Transfer .env file to EC2
         run: |
