--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,19 +57,12 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Debug EC2 secrets
-        run: |
-          echo "EC2_USER: ${{ secrets.EC2_USER }}"
-          echo "EC2_HOST: ${{ secrets.EC2_HOST }}"
-          echo "SSH : ${{ secrets.EC2_SSH_KEY }}"
-
       - name: Transfer .env file to EC2
         run: |
           # The source is .env (from the runner's current directory)
-          # The target is the full path on EC2: /home/${{ secrets.EC2_USER }}/mini_transcendence/
+          # The target is the full path on EC2: /home/ubuntu/mini_transcendence/
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "mkdir -p /home/${{ secrets.EC2_USER }}/mini_transcendence/"
           scp -o StrictHostKeyChecking=no .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/mini_transcendence/
-
-
 
       - name: Deploy to EC2
         run: |
