--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,13 +59,13 @@ jobs:
 
       - name: Copy code to EC2
         run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "mkdir -p /home/${{ secrets.EC2_USER }}/mini_transcendence/"
           scp -o StrictHostKeyChecking=no -r . ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/mini_transcendence/
 
       - name: Transfer .env file to EC2
         run: |
           # The source is .env (from the runner's current directory)
           # The target is the full path on EC2: /home/ubuntu/mini_transcendence/
-          # ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "mkdir -p /home/${{ secrets.EC2_USER }}/mini_transcendence/"
           scp -o StrictHostKeyChecking=no .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/mini_transcendence/
 
       - name: Deploy to EC2
