feat(nginx): Add rate limiting for API endpoints with differentiated limits
Implement comprehensive rate limiting strategy:
- API endpoints: 30 requests/burst for general API access
- Auth endpoints: 10 requests/burst with nodelay for login/registration
- User endpoints: 10 requests/burst with nodelay for user operations
- Tournament/History: 30 requests/burst with nodelay for game operations

Added proper HTTP 429 status codes for rate limit exceeded responses.
Enhances security and prevents API abuse while maintaining good UX
for legitimate

--- a/proxy/conf/nginx.conf
+++ b/proxy/conf/nginx.conf
@@ -74,8 +74,9 @@ http {
     gzip  on;  # Enable compression
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Rate limiting (optional)
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/s;
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=5r/s;   # For auth endpoints
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=20r/s;   # For general API
 
 	#ngnix-prometheus-exporter
     #    server {
