--- a/proxy/conf.d/gateway.conf
+++ b/proxy/conf.d/gateway.conf
@@ -162,7 +162,7 @@ server {
 	# - /api/history/    -> history-service (match history endpoints)
     location /api/ {
 		# rate limiting
-		limit_req zone=api_limit burst=50;
+		limit_req zone=api_limit burst=30;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -174,20 +174,28 @@ server {
 
         # Route definitions
 		location /api/auth/ {
+			limit_req zone=auth_limit burst=10 nodelay;
+			limit_req_status 429;
 			auth_request off;
 			proxy_pass http://auth-service;
 		}
 
         location /api/user/ {
+			limit_req zone=auth_limit burst=10 nodelay;
+			limit_req_status 429;
 			auth_request off;
             proxy_pass http://auth-service;
         }
 
         location /api/tournament/ {
+			limit_req zone=api_limit burst=30 nodelay;
+            limit_req_status 429;
             proxy_pass http://tournament-service;
         }
 
         location /api/history/ {
+			limit_req zone=api_limit burst=30 nodelay;
+            limit_req_status 429;
             proxy_pass http://history-service;
         }
     }
