chore(ansible): Update EC2 hostnames in inventory and SSH key path, remove unused handler
- Updated EC2 instance names in inventory/hosts.ini for clarity and consistency
- Changed SSH private_key_file path in ansible.cfg to match new key location
- Removed unused handler from docker_app role as it was not referenced in any playbook
- No sensitive data included; only configuration and cleanup changes

--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,5 +1,5 @@
 [ec2_hosts]
-ec2_instance ansible_host=ec2-13-60-35-165.eu-north-1.compute.amazonaws.com ansible_user=ubuntu
+ec2_instance ansible_host=ec2-63-178-107-249.eu-central-1.compute.amazonaws.com ansible_user=ubuntu
 # Spiegazione dei campi:
 # ec2_instance: è un nome arbitrario che dai a questa macchina, utile per riferirti ad essa nei playbook.
 # ansible_host: L'indirizzo IP pubblico o il nome DNS pubblico della tua istanza EC2.
