--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -1,11 +1,32 @@
-# playbooks/site.yml
+# playbooks/deploy.yml
+# Run this playbook to deploy to the current hosts.
+# 
+# Usage:
+#   ansible-playbook playbooks/deploy.yml --ask-vault-pass
+#
+# - You will be prompted for the Ansible Vault password to decrypt secrets.
+# - The deployment will target the hosts in the [ec2_hosts] group defined in your inventory/hosts.ini file.
+# - The roles base_setup, app_code, app_config, and docker_app will be applied in order.
+# - Make sure your SSH key is configured on this machine (e.g., ~/.ssh/ec2_ubuntu.pem).
+#
+# About the 'hosts' directive:
+#   The 'hosts' field specifies which group of servers (from your inventory) this playbook will run on.
+#   In this case, 'ec2_hosts' should match a group in your inventory/hosts.ini file, typically representing your AWS EC2 instances.
+#   Example inventory entry:
+#     [ec2_hosts]
+#     ec2_instance ansible_host=your-ec2-public-dns ansible_user=ubuntu
+#
+# This playbook will:
+#   - Prepare the server with Docker and required users
+#   - Deploy your application code from Git
+#   - Configure environment and secrets
+#   - Build and start Docker Compose services
 ---
 - name: Deploy mini_transcendence application
-  # Questo playbook orchestrerà l'installazione, il deployment del codice e l'avvio dell'applicazione.
 
-  hosts: ec2_hosts # Applica a tutti gli host definiti nel gruppo 'ec2_hosts' del tuo inventario
-  become: yes      # Permette ai ruoli di eseguire task con privilegi di root quando necessario
-  gather_facts: yes # Raccoglie i facts del sistema (come ansible_distribution, ansible_os_family)
+  hosts: ec2_hosts
+  become: yes
+  gather_facts: yes
 
   # Includi il file di variabili sensibili criptato con Ansible Vault.
   # Le variabili definite in questo file saranno disponibili per tutte le task e i ruoli in questo play.
