--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,11 +1,11 @@
 # Configuration file for Ansible - update private_key_file path to match your environment
 [defaults]
 inventory = inventory/hosts.ini
-private_key_file = ~/.ssh/ec2_ubuntu.pem
+private_key_file = ~/.ssh/ubuntu_ec2.pem
 roles_path = roles/
 
-[ssh_connection]
+#[ssh_connection]
 # Enable SSH agent forwarding (-A) for private repository access
 # Optimize SSH connections with ControlMaster for better performance
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s -A
+#ssh_args = -o ControlMaster=auto -o ControlPersist=60s -A
 #ssh_args = -A
