--- a/ansible/roles/app_config/tasks/main.yml
+++ b/ansible/roles/app_config/tasks/main.yml
@@ -9,4 +9,4 @@
   #no_log: true # Impedisce che i contenuti sensibili del file appaiano nei log di Ansible
   become: yes
   become_user: "{{ app_owner_user }}"
-  notify: Restart Docker Compose Services # Riabilitiamo la notifica dell'handler!
+  #notify: Restart Docker Compose Services # Riabilitiamo la notifica dell'handler!
