--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,8 +4,8 @@ inventory = inventory/hosts.ini
 private_key_file = ~/.ssh/ubuntu_ec2.pem
 roles_path = roles/
 
-#[ssh_connection]
-# Enable SSH agent forwarding (-A) for private repository access
+[ssh_connection]
+# Enable SSH agent forwarding (-A) for GIT private repository access
 # Optimize SSH connections with ControlMaster for better performance
-#ssh_args = -o ControlMaster=auto -o ControlPersist=60s -A
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -A
 #ssh_args = -A
