--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,26 @@ jobs:
 
       # - name: list files
       #   run: ls -lR
-      
+
       # - name: Run unit test
       #   run: TODO
+
+      - name: Generate dummy .env for CI
+        run: |
+          echo "POSTGRES_USER=test_user" >> .env
+          echo "POSTGRES_PASSWORD=test_pass" >> .env
+          echo "POSTGRES_AUTH_DB=test_db" >> .env
+          echo "POSTGRES_AUTH_HOST=localhost" >> .env
+          echo "POSTGRES_TOURNAMENT_DB=test_tournament" >> .env
+          echo "POSTGRES_TOURNAMENT_HOST=localhost" >> .env
+          echo "POSTGRES_HISTORY_DB=test_history" >> .env
+          echo "POSTGRES_HISTORY_HOST=localhost" >> .env
+          echo "CLOUDFLARE_TUNNEL_TOKEN=dummy" >> .env
+          echo "POSTGRES_PORT=5432" >> .env
+          echo "SECRET_KEY=test-secret-key" >> .env
+          echo "SECRET_KEY_HISTORY=test-secret-key-history" >> .env
+          echo "SECRET_KEY_TOURNAMENT=test-secret-key-tournament" >> .env
+          echo "JWT_ALGO=HS256" >> .env
 
       - name: Build Docker images
         run: docker compose build
