--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      # - name: list files
-      #   run: ls -lR
-
       # - name: Run unit test
       #   run: TODO
 
@@ -46,9 +43,22 @@ jobs:
       - name: Clean up containers
         run: docker compose down
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PA_TOKEN }} #expire in 90 days!
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/mini_transcendence:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/mini_transcendence:${{ github.sha }}
+
       - name: Echo CI stage
         run: echo "CI Stage Code checkout complete."
-
 
 #   cd:
 #     name: Continuous Deployment
